# HWConsole

./: Cargo.toml  README.md
src/: gui.rs  main.rs  sysinfo.rs
