[package]
name = "hwconsole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.3"
nvml-wrapper = "0.9.0"
queues = "1.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
sysinfo = "0.28.4"
